responsive 20em falta portfolio y testimoniio

--- a/index.html
+++ b/index.html
@@ -174,11 +174,12 @@
                 font-weight: 700;
                 color: var(--second-color);
                 font-size: 2.8rem;
+                line-height: 4rem;
               "
             >
               Agencia Digital
             </h2>
-            <h3 class="justify">
+            <h3 class="nosotros__desc justify">
               Somos un equipo de creativos rompiendo las barreras de lo
               convencional y dejando huella en cada proyecto. <br /><br />
               Nuestro equipo se conforma de desarrolladores y diseñadores
@@ -203,7 +204,7 @@
                   class="profile__pic"
                 />
               </div>
-              <h5 style="text-align: center">
+              <h5 class="nosotros__profiledesc" style="text-align: center">
                 Somos quienes damos vida a tus proyectos!!
               </h5>
             </div>
@@ -274,6 +275,8 @@
       <section class="seccion planes" id="planes">
         <div class="planes__circlebg circlebg--1"></div>
         <div class="planes__circlebg circlebg--2"></div>
+        <div class="titlebg">        <h2 class="planes__title">PLANES Y SERVICIOS</h2></div>
+
         <div class="planes__container">
           <div class="planes__card">
             <div class="planes__circlebgbf--white"></div>
