--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />|
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,700;1,800;1,900&display=swap"
@@ -29,6 +29,7 @@
   </head>
   <body>
     <header>
+
       <nav class="navbar">
         <div class="navbar__logo">
           <img
@@ -163,8 +164,10 @@
           />
         </a>
       </section>
+
     </header>
     <main>
+      
       <section class="seccion nosotros" id="nosotros">
         <div class="nosotros__squarebg"></div>
         <div class="nosotros__descripcion">
@@ -275,7 +278,7 @@
       <section class="seccion planes" id="planes">
         <div class="planes__circlebg circlebg--1"></div>
         <div class="planes__circlebg circlebg--2"></div>
-        <div class="titlebg">        <h2 class="planes__title">PLANES Y SERVICIOS</h2></div>
+        <div class="titlebg"><h2 class="planes__title">PLANES Y SERVICIOS</h2></div>
 
         <div class="planes__container">
           <div class="planes__card">
