--- a/index.html
+++ b/index.html
@@ -129,20 +129,18 @@
       <section class="seccion landing" id="inicio">
         <div class="circlebg"></div>
         <div class="landing__info zind">
-          <h1>DALE IMAGEN A TU MARCA</h1>
+          <h1>VISUALIZA TU MARCA EN EL MUNDO DIGITAL</h1>
           <div class="landing__block">
             <h3 class="landing__description">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse
-              saepe vel architecto vitae, voluptatem quaerat. Lorem ipsum dolor
-              sit amet consectetur adipisicing elit.
+              Nos encargamos de brindar soluciones digitales efectivas y a la vanguardia que permitan a nuestros clientes impulsar su presencia y éxito en el mundo digital.
             </h3>
             <div class="landing__links">
-              <a href="#" class="btn landing__link">PLANES</a>
+              <a href="#planes" class="btn landing__link">PLANES</a>
               <h4 style="color: var(--first-color)">
                 Precios <br />
                 desde
               </h4>
-              <h4 class="landing__price">$800.000COP</h4>
+              <h4 class="landing__price">$590.000COP</h4>
               <span class="alert">MÁS VENDIDO</span>
             </div>
           </div>
@@ -176,8 +174,9 @@
               style="
                 font-weight: 700;
                 color: var(--second-color);
-                font-size: 2.8rem;
+                font-size: 3.2rem;
                 line-height: 4rem;
+                letter-spacing: 1px;
               "
             >
               Agencia Digital
@@ -220,7 +219,8 @@
               <li>Creación de sitios web</li>
               <li>Rediseño y adaptación</li>
               <li>Diseño UX/UI</li>
-              <li>SEO</li>
+              <li>Posicionamiento SEO</li>
+              <li>WooCommerce</li>
             </ul>
             <img
               src="src/img/iconos/IconWeb.png"
@@ -233,9 +233,9 @@
             <h3 class="nosotros__card__title">Marketing Digital</h3>
             <ul>
               <li>Estrategia de crecimiento</li>
-              <li>Generación de contenido</li>
-              <li>Email Marketing</li>
-              <li>Posicionamiento de Marca</li>
+              <li>Creación de contenido</li>
+              <li>Email marketing</li>
+              <li>Posicionamiento de marca</li>
             </ul>
             <img
               src="src/img/iconos/iconMarketing.png"
@@ -248,9 +248,9 @@
             <h3 class="nosotros__card__title">Diseño</h3>
             <ul>
               <li>Branding</li>
-              <li>Identidad de Marca</li>
+              <li>Identidad de marca</li>
               <li>Flyer publicitario</li>
-              <li>Diseño a Gran Formato</li>
+              <li>Diseño a gran formato</li>
             </ul>
             <img
               src="src/img/iconos/IconDiseño.png"
@@ -262,8 +262,8 @@
           <div class="nosotros__card">
             <h3 class="nosotros__card__title">Producción Audiovisual</h3>
             <ul>
-              <li>Producción Fotografica y de Video</li>
-              <li>Videos Publicitarios para Redes Sociales</li>
+              <li>Producción fotográfica y de video</li>
+              <li>Videos publicitarios para redes sociales</li>
               <li>Edición de video</li>
             </ul>
             <img
@@ -285,21 +285,30 @@
             <div class="planes__circlebgbf--white"></div>
             <div class="planes__circlebgbf"></div>
             <div class="planes__card__header">
-              <h2 class="planes__card__title">Landing Page</h2>
+              <h2 class="planes__card__title">Plan Web Básico</h2>
               <h5 class="txtw planes__txtw">Ideal para mostrar tu producto</h5>
               <div class="planes__card__price">
                 <h3 class="txtw planes__txtw">COP$</h3>
-                <h4 class="txtw planes__txtw">800.000</h4>
+                <h4 class="txtw planes__txtw">590.000</h4>
                 <span class="planes__alert">Ahorra 28%</span>
               </div>
             </div>
             <ul class="planes__card__info">
-              <li>Producción Fotografica y de Video</li>
-              <li>Videos Publicitarios para Redes Sociales</li>
-              <li>Edición de video</li>
-              <li>Producción Fotografica y de Video</li>
-              <li>Videos Publicitarios para Redes Sociales</li>
-              <li>Edición de video</li>
+              <li>Diseño adaptable a dispositivos</li>
+              <li>Diseño sitio web hasta 4 secciones</li>
+              <li>Página administrable</li>
+              <li>Asesoría de diseño UX/UI</li>
+              <li>Integración con redes sociales</li>
+              <li>Botón para whatsapp</li>
+              <li>Integración con mapas de google</li>
+              <li>Dominio GRATIS por 1 año</li>
+              <li>Alojamiento web GRATIS por 1 año</li>
+              <li>Certificado de seguridad SSL</li>
+              <li>Hasta 3 emails corporativos</li>
+              <li>Política de privacidad y cookies</li>
+              <li>Capacitación de administración de la página</li>
+              <li>Garantía 1 año sobre el funcionamiento del sitio web</li>
+              <li>Página multilenguajes</li>
             </ul>
             <a href="" class="btn2 planes__btn">Adquierelo</a>
           </div>
@@ -390,7 +399,9 @@
               class="portafolio__webimg window"
             />
             <div class="bg-hover">
-              <div class="portafolio__webtitle">SpiwakHotels</div>
+              <div class="portafolio__webtitle">
+                <img src="src/img/spiwaklogoW.png" alt="">
+              </div>
             </div>
           </a>
           <!-- ITEM -->
@@ -405,7 +416,9 @@
               class="portafolio__webimg window"
             />
             <div class="bg-hover">
-              <div class="portafolio__webtitle">AwenCamp</div>
+              <div class="portafolio__webtitle">
+                <img src="src/img/awencamplogow.png" alt="">
+              </div>
             </div>
           </a>
           <!-- ITEM -->
@@ -420,7 +433,9 @@
               class="portafolio__webimg window"
             />
             <div class="bg-hover">
-              <div class="portafolio__webtitle">REVHELO</div>
+              <div class="portafolio__webtitle">
+                <img src="src/img/revhelologo.png" alt="">
+              </div>
             </div>
           </a>
           <!-- ITEM -->
@@ -431,7 +446,9 @@
               class="portafolio__webimg window"
             />
             <div class="bg-hover">
-              <div class="portafolio__webtitle">Pokedex</div>
+              <div class="portafolio__webtitle">
+                <img src="src/img/pokedexlogo.png" alt="">
+              </div>
             </div>
           </a>
         </div>
@@ -443,13 +460,13 @@
           <div class="testimonio__card">
             <div class="testimonio__header">
               <img
-                src="src/img/profileKevin.jpg"
+                src="src/img/profile1.png"
                 alt="foto-perfil"
                 class="testimonio__photo"
               />
               <div class="testimonio__datos">
-                <h4 class="testimonio__nombre">Kevin Suarez Gaviria</h4>
-                <h5 class="testimonio__fecha">Enero 21, 2023</h5>
+                <h4 class="testimonio__nombre">Carlos Franco Aguirre</h4>
+                <h5 class="testimonio__fecha">junio 25, 2022</h5>
               </div>
             </div>
             <div class="testimonio__body">
@@ -484,9 +501,7 @@
                 <img src="src/img/iconos/google.png" alt="logo-google" />
               </div>
               <p class="testimonio__declaracion">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae
-                veritatis animi autem dignissimos iste quis dolore minus natus
-                iure dolorum.
+                Excelente, muy atentos y dinamicos con el trabajo me quedo muy agusto.
               </p>
             </div>
           </div>
@@ -494,13 +509,13 @@
           <div class="testimonio__card">
             <div class="testimonio__header">
               <img
-                src="src/img/profileKevin.jpg"
+                src="src/img/profile2.jpg"
                 alt="foto-perfil"
                 class="testimonio__photo"
               />
               <div class="testimonio__datos">
-                <h4 class="testimonio__nombre">Kevin Suarez Gaviria</h4>
-                <h5 class="testimonio__fecha">Enero 21, 2023</h5>
+                <h4 class="testimonio__nombre">Lorena Paz</h4>
+                <h5 class="testimonio__fecha">agosto 05, 2022</h5>
               </div>
             </div>
             <div class="testimonio__body">
@@ -526,18 +541,11 @@
                     alt="estrella"
                     class="star"
                   />
-                  <img
-                    src="src/img/iconos/estrella.png"
-                    alt="estrella"
-                    class="star"
-                  />
                 </div>
                 <img src="src/img/iconos/google.png" alt="logo-google" />
               </div>
               <p class="testimonio__declaracion">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae
-                veritatis animi autem dignissimos iste quis dolore minus natus
-                iure dolorum.
+                Trabajar con VisualKings ha sido una experiencia increíble. Desde el primer día, sentimos que realmente se preocuparon por entender nuestros objetivos y necesidades únicas.
               </p>
             </div>
           </div>
@@ -545,13 +553,13 @@
           <div class="testimonio__card">
             <div class="testimonio__header">
               <img
-                src="src/img/profileKevin.jpg"
+                src="src/img/profile3.jpeg"
                 alt="foto-perfil"
                 class="testimonio__photo"
               />
               <div class="testimonio__datos">
-                <h4 class="testimonio__nombre">Kevin Suarez Gaviria</h4>
-                <h5 class="testimonio__fecha">Enero 21, 2023</h5>
+                <h4 class="testimonio__nombre">Alberto Martinez</h4>
+                <h5 class="testimonio__fecha">julio 20, 2022</h5>
               </div>
             </div>
             <div class="testimonio__body">
@@ -586,9 +594,7 @@
                 <img src="src/img/iconos/google.png" alt="logo-google" />
               </div>
               <p class="testimonio__declaracion">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae
-                veritatis animi autem dignissimos iste quis dolore minus natus
-                iure dolorum.
+                Nos brindaron una solución personalizada que realmente ayudó a impulsar nuestro éxito en el mercado. Además, su equipo de profesionales es excepcional y siempre estuvo a nuestro lado. ¡Los recomendamos altamente!.
               </p>
             </div>
           </div>
@@ -596,13 +602,13 @@
           <div class="testimonio__card">
             <div class="testimonio__header">
               <img
-                src="src/img/profileKevin.jpg"
+                src="src/img/profile4.jpg"
                 alt="foto-perfil"
                 class="testimonio__photo"
               />
               <div class="testimonio__datos">
-                <h4 class="testimonio__nombre">Kevin Suarez Gaviria</h4>
-                <h5 class="testimonio__fecha">Enero 21, 2023</h5>
+                <h4 class="testimonio__nombre">Luis Felipe Díaz</h4>
+                <h5 class="testimonio__fecha">Agosto 20, 2022</h5>
               </div>
             </div>
             <div class="testimonio__body">
@@ -628,18 +634,11 @@
                     alt="estrella"
                     class="star"
                   />
-                  <img
-                    src="src/img/iconos/estrella.png"
-                    alt="estrella"
-                    class="star"
-                  />
                 </div>
                 <img src="src/img/iconos/google.png" alt="logo-google" />
               </div>
               <p class="testimonio__declaracion">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae
-                veritatis animi autem dignissimos iste quis dolore minus natus
-                iure dolorum.
+                Tuve la primicia de poder trabajar con ellos y desde la primera llamada, estuvieron muy atentos y se portaron excelente, el tiempo de entrega fue más rápido de lo esperado y la calidad de trabajo inigualable, muy satisfecho con ellos y volvería a trabajar con ellos.
               </p>
             </div>
           </div>
@@ -647,13 +646,13 @@
           <div class="testimonio__card">
             <div class="testimonio__header">
               <img
-                src="src/img/profileKevin.jpg"
+                src="src/img/profile1.png"
                 alt="foto-perfil"
                 class="testimonio__photo"
               />
               <div class="testimonio__datos">
-                <h4 class="testimonio__nombre">Kevin Suarez Gaviria</h4>
-                <h5 class="testimonio__fecha">Enero 21, 2023</h5>
+                <h4 class="testimonio__nombre">Julian Ramirez Cordoba</h4>
+                <h5 class="testimonio__fecha">Septiembre 15, 2022</h5>
               </div>
             </div>
             <div class="testimonio__body">
@@ -688,9 +687,7 @@
                 <img src="src/img/iconos/google.png" alt="logo-google" />
               </div>
               <p class="testimonio__declaracion">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae
-                veritatis animi autem dignissimos iste quis dolore minus natus
-                iure dolorum.
+                Nos brindaron una solución personalizada que realmente impactó en nuestro éxito en el mercado. No dudes en contactarlos y experimentar por ti mismo lo que pueden hacer por ti. 
               </p>
             </div>
           </div>
@@ -698,13 +695,13 @@
           <div class="testimonio__card">
             <div class="testimonio__header">
               <img
-                src="src/img/profileKevin.jpg"
+                src="src/img/profile1.png"
                 alt="foto-perfil"
                 class="testimonio__photo"
               />
               <div class="testimonio__datos">
-                <h4 class="testimonio__nombre">Kevin Suarez Gaviria</h4>
-                <h5 class="testimonio__fecha">Enero 21, 2023</h5>
+                <h4 class="testimonio__nombre">Luisa Hernandez</h4>
+                <h5 class="testimonio__fecha">Octubre 30, 2022</h5>
               </div>
             </div>
             <div class="testimonio__body">
@@ -739,15 +736,14 @@
                 <img src="src/img/iconos/google.png" alt="logo-google" />
               </div>
               <p class="testimonio__declaracion">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae
-                veritatis animi autem dignissimos iste quis dolore minus natus
-                iure dolorum.
+                ¿Estás buscando una pagina web efectiva para tu negocio? ¡Mira lo que VisualKings hizo por nosotros!
               </p>
             </div>
           </div>
         </div>
 
       </section>
+
     </main>
 
     <footer id="footer" class="seccion">
