responsive plan cards until 48 em, still work from 48 en above

--- a/index.html
+++ b/index.html
@@ -290,23 +290,23 @@
               <div class="planes__card__price">
                 <h3 class="txtw planes__txtw">COP$</h3>
                 <h4 class="txtw planes__txtw">590.000</h4>
-                <span class="planes__alert">Ahorra 28%</span>
+                <span class="planes__alert">Ahorra 48%</span>
               </div>
             </div>
             <ul class="planes__card__info">
               <li>Diseño adaptable a dispositivos</li>
-              <li>Diseño sitio web hasta 4 secciones</li>
-              <li>Página administrable</li>
+              <!-- <li>Diseño sitio web hasta 4 secciones</li> -->
+              <!-- <li>Página administrable</li> -->
               <li>Asesoría de diseño UX/UI</li>
               <li>Integración con redes sociales</li>
-              <li>Botón para whatsapp</li>
+              <!-- <li>Botón para whatsapp</li> -->
               <li>Integración con mapas de google</li>
-              <li>Dominio GRATIS por 1 año</li>
-              <li>Alojamiento web GRATIS por 1 año</li>
+              <li>Dominio <strong>GRATIS</strong> por 1 año</li>
+              <li>Alojamiento web <strong>GRATIS</strong> por 1 año</li>
               <li>Certificado de seguridad SSL</li>
               <li>Hasta 3 emails corporativos</li>
-              <li>Política de privacidad y cookies</li>
-              <li>Capacitación de administración de la página</li>
+              <!-- <li>Política de privacidad y cookies</li> -->
+              <!-- <li>Capacitación de administración de la página</li> -->
               <li>Garantía 1 año sobre el funcionamiento del sitio web</li>
               <li>Página multilenguajes</li>
             </ul>
@@ -317,21 +317,25 @@
             <div class="planes__circlebgbf--white"></div>
             <div class="planes__circlebgbf"></div>
             <div class="planes__card__header">
-              <h2 class="planes__card__title">Landing Page</h2>
-              <h5 class="txtw planes__txtw">Ideal para mostrar tu producto</h5>
+              <h2 class="planes__card__title">PLAN WEB BONZAI</h2>
+              <h5 class="txtw planes__txtw">Perfecto para blogs y tiendas</h5>
               <div class="planes__card__price">
                 <h3 class="txtw planes__txtw">COP$</h3>
-                <h4 class="txtw planes__txtw">800.000</h4>
-                <span class="planes__alert">Ahorra 28%</span>
+                <h4 class="txtw planes__txtw">1.199.000</h4>
+                <span class="planes__alert">Ahorra 35%</span>
               </div>
             </div>
             <ul class="planes__card__info">
-              <li>Producción Fotografica y de Video</li>
-              <li>Videos Publicitarios para Redes Sociales</li>
-              <li>Edición de video</li>
-              <li>Producción Fotografica y de Video</li>
-              <li>Videos Publicitarios para Redes Sociales</li>
-              <li>Edición de video</li>
+              <li>Íncluye plan básico</li>
+              <li>Posicionamiento SEO</li>
+              <li>Integración mapas de google</li>
+              <li>Formulario de contacto</li>
+              <li>Hasta 4 emails corporativos</li>
+              <li>Soporte técnico especializado</li>
+              <li>Administración, hasta 1 cambio al mes</li>
+              <li>Copia de seguridad del sitio web</li>
+              <li>Dominio <strong>GRATIS</strong> por 1 año</li>
+              <li>Alojamiento web <strong>GRATIS</strong> por 1 año</li>
             </ul>
             <a href="" class="btn2 planes__btn">Adquierelo</a>
           </div>
@@ -340,21 +344,23 @@
             <div class="planes__circlebgbf--white"></div>
             <div class="planes__circlebgbf"></div>
             <div class="planes__card__header">
-              <h2 class="planes__card__title">Landing Page</h2>
-              <h5 class="txtw planes__txtw">Ideal para mostrar tu producto</h5>
+              <h2 class="planes__card__title">PLAN WOOCOMMERCE</h2>
+              <h5 class="txtw planes__txtw">Perfecto para vender tu producto</h5>
               <div class="planes__card__price">
                 <h3 class="txtw planes__txtw">COP$</h3>
-                <h4 class="txtw planes__txtw">800.000</h4>
-                <span class="planes__alert">Ahorra 28%</span>
+                <h4 class="txtw planes__txtw">1.780.000</h4>
+                <span class="planes__alert">Ahorra 20%</span>
               </div>
             </div>
             <ul class="planes__card__info">
-              <li>Producción Fotografica y de Video</li>
-              <li>Videos Publicitarios para Redes Sociales</li>
-              <li>Edición de video</li>
-              <li>Producción Fotografica y de Video</li>
-              <li>Videos Publicitarios para Redes Sociales</li>
-              <li>Edición de video</li>
+              <li>Incluye los planes bonzai y básico</li>
+              <li>WEB multipáginas (hasta 4)</li>
+              <li>Pasarela de pagos (Stripe & paypal)</li>
+              <li>Copia de seguridad del sitio web</li>
+              <li>Hasta 5 emails corporativos</li>
+              <li>Capacitación de administracion de la pagina</li>
+              <li>Dominio <strong>GRATIS</strong> por 1 año</li>
+              <li>Alojamiento web <strong>GRATIS</strong> por 1 año</li>
             </ul>
             <a href="" class="btn2 planes__btn">Adquierelo</a>
           </div>
