arreglo circulo iphone

--- a/index.html
+++ b/index.html
@@ -276,7 +276,9 @@
       </section>
 
       <section class="seccion planes" id="planes">
-        <div class="planes__circlebg circlebg--1"></div>
+        <div class="contener__bola">
+          <div class="planes__circlebg circlebg--1"></div>
+        </div>
         <div class="planes__circlebg circlebg--2"></div>
         <div class="titlebg"><h2 class="planes__title">PLANES Y SERVICIOS</h2></div>
 
