tarjetas plan responsive and header outsize

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               <li>Rediseño y adaptación</li>
               <li>Diseño UX/UI</li>
               <li>Posicionamiento SEO</li>
-              <li>WooCommerce</li>
+              <li>Pasarelas de pago</li>
             </ul>
             <img
               src="src/img/iconos/IconWeb.png"
@@ -346,7 +346,7 @@
             <div class="planes__circlebgbf--white"></div>
             <div class="planes__circlebgbf"></div>
             <div class="planes__card__header">
-              <h2 class="planes__card__title">PLAN WOOCOMMERCE</h2>
+              <h2 class="planes__card__title">PLAN STORE</h2>
               <h5 class="txtw planes__txtw">Perfecto para vender tu producto</h5>
               <div class="planes__card__price">
                 <h3 class="txtw planes__txtw">COP$</h3>
@@ -356,7 +356,7 @@
             </div>
             <ul class="planes__card__info">
               <li>Incluye los planes bonzai y básico</li>
-              <li>WEB multipáginas (hasta 4)</li>
+              <li>WEB multipáginas (hasta 4 pàginas)</li>
               <li>Pasarela de pagos (Stripe & paypal)</li>
               <li>Copia de seguridad del sitio web</li>
               <li>Hasta 5 emails corporativos</li>
@@ -371,21 +371,21 @@
             <div class="planes__circlebgbf--white"></div>
             <div class="planes__circlebgbf"></div>
             <div class="planes__card__header">
-              <h2 class="planes__card__title">Landing Page</h2>
-              <h5 class="txtw planes__txtw">Ideal para mostrar tu producto</h5>
+              <h2 class="planes__card__title">PLAN MARKETING</h2>
+              <h5 class="txtw planes__txtw">Perfecto para hacer ver tu producto</h5>
               <div class="planes__card__price">
                 <h3 class="txtw planes__txtw">COP$</h3>
-                <h4 class="txtw planes__txtw">800.000</h4>
+                <h4 class="txtw planes__txtw">450.000</h4>
                 <span class="planes__alert">Ahorra 28%</span>
               </div>
             </div>
             <ul class="planes__card__info">
-              <li>Producción Fotografica y de Video</li>
-              <li>Videos Publicitarios para Redes Sociales</li>
-              <li>Edición de video</li>
-              <li>Producción Fotografica y de Video</li>
-              <li>Videos Publicitarios para Redes Sociales</li>
-              <li>Edición de video</li>
+              <li>Analisìs de competencia y Benchmark</li>
+              <li>Desarrollo creativo de contenido</li>
+              <li>Planificaciòn mensual de contenido con COpywriting</li>
+              <li>Creaciòn de publicaciones para Instagram</li>
+              <li>Piezas audiovisuales</li>
+              <li>Administración y gestiòn de cuentas</li>
             </ul>
             <a href="" class="btn2 planes__btn">Adquierelo</a>
           </div>
